--- a/html/site.css
+++ b/html/site.css
@@ -1,12 +1,22 @@
+body {
+    margin: 0;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+
+
 .mae{
     display:flex;
     flex-direction:row;
+    width: 100%;
 }
 
 .lado-esquerdo{
-position: absolute;
-width: 356px;
-height: 1176px;
+position: fixed;
+width: 18em;
+height: 41.1em;;
 left: 0px;
 top: 0px;
 
@@ -15,30 +25,64 @@ background: #2B3031;
 
 
 .cabecalho{
+    display:flex;
+    flex-direction:row;
+    margin: 2em;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.logo{
+    border-right: 10px solid transparent;
+}
+
+
+
+.nome{
+    font: 700 1.2em Roboto;
+}
+
+span{
+    color: #EA10C7;
+}
+
+
+.barra{
+   background-color: #262626;
+   color: #262626;
+   height: 3em;
+}
+
+
+.especificacoes{
+    display:flex;
+    flex-direction:row;
+    
+    justify-content: space-between;
 
 }
 
 
-.logo{}
+.opcao{
+    font: 700 1.2em Roboto;
+    color:white;
+    margin-left: 2em;
+}
 
 
-
-.nome{}
-
-
-.barra{}
+.setinha{
+    margin-top: 0.5em;
+}
 
 
-.especificacoes{}
-
-
-.opcao{}
-
-
-.setinha{}
-
-
-.al{}
+.al{
+    display:flex;
+    flex-direction:row;
+    background-color: white;
+    height: 3em;
+    margin-top: 2em;
+}
 
 
 .barra-rosa{}
@@ -46,7 +90,9 @@ background: #2B3031;
 
 
 
-.click{}
+.click{
+    font: 700 1.2em Roboto;
+}
 
 
 
@@ -56,15 +102,324 @@ background: #2B3031;
 
 
 
-.lado-direito{}
+.lado-direito{
+    display:flex;
+    flex-direction: column;
+    background-color: #F5F5F5;
+    margin-left: 18em;
+    height: 190vh;
+    width: 68em;
+}
 
 
 
 
 .cabecalho2{
+    display:flex;
+    flex-direction:row;
+    background-color: white;
     position: absolute;
-    width: 1004px;
+    width: 65em;
     height: 57px;
-    left: 394px;
+    left: 19em;
     top: 17px;
 }
+
+
+
+.imgs{}
+
+.imagem button{
+    padding: 0em;
+    border-radius: 3em;
+}
+
+
+.imagem{
+    border-right: 10px solid transparent;
+    height: 0em;
+}
+
+
+
+.bolinha{
+    margin-left: 3em;
+}
+
+
+
+.n{
+    margin-left: 3.4em;
+    margin-top: -1.2em;
+    font: 700 1.2em Roboto;
+}
+
+
+
+.frase{
+    font: 700 1em Roboto;
+}
+
+
+
+.opcoes{ 
+    display:flex;
+    flex-direction:row;
+    margin-left: 43em;
+    margin-top: 0.5em;
+}
+
+
+.recarregar button{
+    border-radius: 3em;
+    padding: 0.7em 0.7em;
+    background-color: #986CDF;
+    border: black;
+
+}
+
+
+
+.recarregar{
+    border-right: 10px solid transparent;
+}
+
+.sair button{
+    border-radius: 3em;
+    padding: 0.5em 0.7em;
+    background-color: #986CDF;
+    border: black;
+}
+
+.sair{
+    border-right: 10px solid transparent;
+}
+
+
+
+
+.pt2{
+    background-color: white;
+    margin: 13em 4em 4em 4em;
+}
+
+
+
+.descricao{
+    display:flex;
+    flex-direction:row;
+    Height:6em;
+    margin-top: 2em;
+    margin-left: 3em;
+}
+
+
+
+
+.barraR{
+
+}
+
+
+.titulo{
+    font: 700 1.5em Roboto;
+    
+    margin-left: 1em;
+
+}
+
+
+
+
+.conteudo{
+    margin-left: 12em;
+    margin-bottom: 3.5em;
+}
+
+
+
+
+.lado1{
+    display:flex;
+    flex-direction:row;
+    
+}
+
+
+
+
+.pri{}
+
+
+.no{
+    font: 700 1em Roboto;
+}
+
+
+
+.seg{
+    margin-left: 1em;
+}
+
+
+
+.c{
+    font: 700 1em Roboto;
+}
+
+
+
+.lado2{
+    display:flex;
+    flex-direction:row;
+    margin-top: 1em;
+}
+
+
+
+.ter{
+    font: 700 1em Roboto;
+}
+
+
+
+.ch{}
+
+
+
+
+.qua{
+    font: 700 1em Roboto;
+    margin-left: 1em;
+}
+
+
+
+.t{}
+
+
+input{
+    
+    width: 20em;
+    height: 5em;
+    border: 8px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding-left: .5em;
+}
+
+.bota{
+    margin-top: 1.2em;
+    margin-left: 1.5em;
+
+}
+
+
+
+.bota button{
+    background-color:#EA10C7;
+    color:white;
+    border:black;
+    font: 700 1em Roboto;
+    border-radius: 3em;
+    padding: 0.5em;
+}
+
+
+.pt3{
+    height: 24em;
+    background-color: white;
+    margin-left:4em;
+    margin-right:4em;
+    height:104vh;
+}
+
+
+
+
+.descricao2{
+    display:flex;
+    flex-direction:row;
+    
+    font: 700 1.5em Roboto;
+    height: 2em;
+    margin-top: 2em;
+    margin-left: 2em;
+}
+
+
+.barraR2{}
+
+
+
+
+.titulo2{
+    font: 700 1em Roboto;
+    height: 7em;
+    
+    margin-left: 1em;
+
+}
+
+
+.tabela{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font: 700 1em Roboto;
+    margin-left: 2em;
+    margin-right: 2em;
+}
+
+
+
+.campos{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+
+
+.resultados{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+
+.alterar{
+    border-right: 10px solid transparent;
+}
+
+
+.excluir{
+    border-right: 10px solid transparent;
+}
+
+
+.resultados2{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
