--- a/html/site.css
+++ b/html/site.css
@@ -16,7 +16,7 @@ body {
 .lado-esquerdo{
 position: fixed;
 width: 18em;
-height: 41.1em;;
+height: 100VH;
 left: 0px;
 top: 0px;
 
@@ -73,6 +73,7 @@ span{
 
 .setinha{
     margin-top: 0.5em;
+    margin-right: 1em;
 }
 
 
@@ -119,10 +120,13 @@ span{
     flex-direction:row;
     background-color: white;
     position: absolute;
-    width: 65em;
-    height: 57px;
-    left: 19em;
+    width: 60.9em;
+    height: 66px;
     top: 17px;
+    margin-left: 1.6em;
+    left: 16.4em;
+    margin-top: -1em;
+
 }
 
 
@@ -151,13 +155,16 @@ span{
 .n{
     margin-left: 3.4em;
     margin-top: -1.2em;
-    font: 700 1.2em Roboto;
+    font: 700 1em Roboto;
 }
 
 
 
 .frase{
     font: 700 1em Roboto;
+    align-items: flex-end;
+
+    margin-top: 2em;
 }
 
 
@@ -165,17 +172,21 @@ span{
 .opcoes{ 
     display:flex;
     flex-direction:row;
-    margin-left: 43em;
-    margin-top: 0.5em;
+    align-items: center;
+    justify-content: center;
+    margin-left: 41em;
+    margin-top: -0.5em;
 }
 
 
 .recarregar button{
-    border-radius: 3em;
-    padding: 0.7em 0.7em;
+    display:flex;
+    align-items: center;
+    border-radius: 50%;
     background-color: #986CDF;
     border: black;
-
+    height: 34px;
+    width: 34px;
 }
 
 
@@ -185,10 +196,13 @@ span{
 }
 
 .sair button{
-    border-radius: 3em;
-    padding: 0.5em 0.7em;
+    display:flex;
+    align-items: center;
+    border-radius: 50%;
     background-color: #986CDF;
     border: black;
+    height: 34px;
+    width: 34px;
 }
 
 .sair{
@@ -200,7 +214,7 @@ span{
 
 .pt2{
     background-color: white;
-    margin: 13em 4em 4em 4em;
+    margin: 8em 4em 4em 4em;
 }
 
 
@@ -232,8 +246,8 @@ span{
 
 
 .conteudo{
-    margin-left: 12em;
     margin-bottom: 3.5em;
+    margin-left: 4em;
 }
 
 
@@ -301,16 +315,17 @@ span{
 input{
     
     width: 20em;
-    height: 5em;
+    height: 2em;
     border: 8px;
     box-sizing: border-box;
     border-radius: 5px;
     padding-left: .5em;
+    outline-style: auto;
 }
 
 .bota{
-    margin-top: 1.2em;
     margin-left: 1.5em;
+    margin-top: 0.9em;
 
 }
 
@@ -363,28 +378,34 @@ input{
 
 
 .tabela{
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
+
     font: 700 1em Roboto;
     margin-left: 2em;
     margin-right: 2em;
+    width: calc(100% - 4em);
+    border-collapse: collapse;
+    text-align: left;
+
 }
+
+th,td {
+    padding: 1em;
+ }
 
 
 
 .campos{
-    display:flex;
-    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
+    background-color: #986CDF;
+    color:white;
+    height: 3em;
 }
 
 
 
 
 .resultados{
-    display:flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -401,8 +422,6 @@ input{
 
 
 .resultados2{
-    display:flex;
-    flex-direction: row;
     justify-content: space-between;
 
 }
